# retrofitted_tractor_data_adapters

./: CMakeLists.txt  README.md  package.xml
config/: retrofitted_tractor_data_adapters_config.yaml  ros2_ngsild_client_config.yaml  sd_ngsild_adapter_config.yaml
json/: CommandMessage.json  StateMessage.json
launch/: retrofitted_tractor_data_adapters.launch.xml  ros2_ngsild_client.launch.xml  sd_ngsild_adapter.launch.xml
msg/: CommandMessage.msg  GeographicPose.msg  StateMessage.msg
src/: ngsild_to_ros2_client.py  ocb_communication_reporter.py  ros2_ngsild_client.py  ros2_to_ngsild_client.py  ros2_to_sdm.py  sd_ngsild_adapter.py  sdm_to_ros2.py
srv/: NGSILDFile.srv
utils/: upload_entity.py
